Fix vertical alignment in info panel

--- a/css/legend.css
+++ b/css/legend.css
@@ -79,7 +79,7 @@ input[type=number]{
 .infoandshare {
     width: 100%;
     float:left;
-    vertical-align: center;
+    vertical-align: middle;
 }
 
 .infoentry {
